objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Timezone__c</fullName>
        <formula>IF(CONTAINS( Realtime_TimeZone_Offset__c, &apos;Pacific Standard Time&apos;) ,&apos;PST&apos;,  IF( CONTAINS(Realtime_TimeZone_Offset__c, &apos;Eastern Standard Time&apos;) , &apos;EST&apos;,  IF( CONTAINS(Realtime_TimeZone_Offset__c, &apos;Mountain Standard Time&apos;) , &apos;MST&apos;,  IF( CONTAINS(Realtime_TimeZone_Offset__c, &apos;Central Standard Time&apos;) , &apos;CST&apos;,  IF( CONTAINS(Realtime_TimeZone_Offset__c, &apos;Alaskan Standard Time&apos;) , &apos;AST&apos;,  IF( CONTAINS(Realtime_TimeZone_Offset__c, &apos;Hawaiian Standard Time&apos;) , &apos;HST&apos;, &apos;PST&apos;) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Timezone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Divisions__c</fullName>
        <label>Active Divisions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlackbookPrice_AMT__c</fullName>
        <description>Lead Enrichment and Scoring (If the Lead Dealer is same as the Equity dealer, we will let the dealer know)</description>
        <label>Blackbook Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BusinessUnit_TXT__c</fullName>
        <label>Business Unit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_Duplicate_Merge_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>we should see that any duplicate leads coming in within 5 minutes from providers who have the flag &apos;Bypass Duplicate Merge Rule&apos; checked on are not rejected but converted to an opportunity with lead status as &apos;Duplicate Similar&apos;.</description>
        <label>Bypass Duplicate Merge Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CID_TXT__c</fullName>
        <label>CID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMTool_TXT__c</fullName>
        <label>CRM Tool</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMVendorEff_Date_DT__c</fullName>
        <label>CRM Vendor Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CalculatedEquity_AMT__c</fullName>
        <description>Lead Enrichment and Scoring (If the Lead Dealer is same as the Equity dealer, we will let the dealer know)</description>
        <label>Calculated Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Certification_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_api__c</fullName>
        <formula>text( Channel__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel api</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Third_Party_for_Duplicate_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Compare against Third Party for Duplicate</description>
        <label>Compare Third Party for Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConfirmInterestNotificationDate__c</fullName>
        <label>Confirm Interest Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Key__c</fullName>
        <label>Contact Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DLPostalCodeRank_CD_RNK__c</fullName>
        <label>Dealer Postal Code Ranking</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSP_Lead_Source__c</fullName>
        <label>DSP Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DSP Tekion</fullName>
                </value>
                <value>
                    <fullName>DSP WalkIN</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealerAccessLevel_TXT__c</fullName>
        <label>Dealer Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Access</fullName>
                </value>
                <value>
                    <fullName>No Access</fullName>
                    <default>true</default>
                    <label>No Access</label>
                </value>
                <value>
                    <fullName>Reporting Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealerAttributes_NM__c</fullName>
        <label>Dealer Attributes (Name and Value)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerCRMVendor_TXT__c</fullName>
        <label>Dealer CRM Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerCityStateRank_RNK__c</fullName>
        <label>Dealer City State Ranking</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerCode_CD__c</fullName>
        <externalId>true</externalId>
        <label>Dealer Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DealerDBAName_NM__c</fullName>
        <label>Dealer DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerDistrict_TXT__c</fullName>
        <label>Dealer District</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerLegalName_NM__c</fullName>
        <label>Dealer Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerWebsiteAddrs__c</fullName>
        <label>Dealer Website Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>HELMS Partner Community</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Metro_Name__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-6374 Story name.
Description: This is to store metro information.
Source System: Coming from batch feed daily basis.
Integration: NA.
Data Transformation: N/A.
Functional Definition: This loaded from B2C Dealer Feed in HELMS&apos; uploaded in Dealer Account.</description>
        <label>Dealer Metro Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deduplication__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this flag is true then de duplication logic will be done for HELMS &amp; DSP</description>
        <label>Deduplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>CASE(SubDivision_TXT__c , &quot;Honda&quot; , &quot;A&quot;, &quot;Acura&quot;, &quot;B&quot;, &quot;NSX&quot;, &quot;B&quot;, &quot;Motorcycle&quot;, &quot;M&quot;, &quot;Marine&quot;, &quot;P&quot;, &quot;Engine&quot;, &quot;P&quot;, &quot;PowerEquipment&quot;, &quot;P&quot; , &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <label>Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Enrichment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>this field is using for DSP Leads</description>
        <label>Enrichment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EscalationEmailLevel1__c</fullName>
        <label>Escalation Email Level 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EscalationEmailLevel2__c</fullName>
        <label>Escalation Email Level 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Scoring_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field checked means all the opportunities of this as provider will be excluded for calculation of scores.(Einstein scores LMS-6827)</description>
        <label>Exclude from Scoring Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FriCloseHour__c</fullName>
        <label>Fri Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FriOpenHour__c</fullName>
        <label>Fri Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HondaDigitalSolutions_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Honda Digital Solutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive_CD__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Concierge_Process_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Concierge Process Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Stop_Sent_To_eCRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Stop Sent To eCRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Urgent_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this flag is checked , all opportunities under this provider will be marked with Priority=urgent irrespective of Einstein score values and predictions.LMS-6827</description>
        <label>Is Urgent Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastDateofService_DT__c</fullName>
        <description>Scoring</description>
        <label>Last Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launchbox_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>used for Data Migration, external id, unique</description>
        <externalId>true</externalId>
        <label>Launchbox_ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeadEntryPoint_TXT__c</fullName>
        <label>Lead Entry Point</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>eShopping</fullName>
                </value>
                <value>
                    <fullName>ECRM</fullName>
                </value>
                <value>
                    <fullName>LDRA</fullName>
                </value>
                <value>
                    <fullName>Urban Science</fullName>
                </value>
                <value>
                    <fullName>Direct to Dealer CRM</fullName>
                </value>
                <value>
                    <fullName>ECRM/Events</fullName>
                </value>
                <value>
                    <fullName>Email Campaigns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadVendorName_TXT__c</fullName>
        <label>Lead Vendor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Provider Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Walk-in</fullName>
                </value>
                <value>
                    <fullName>Brand Site</fullName>
                </value>
                <value>
                    <fullName>Lead Campaign</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Dealer Website</fullName>
                </value>
                <value>
                    <fullName>Event/Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>DSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoanAmount_AMT__c</fullName>
        <description>Lead Enrichment and Scoring (If the Lead Dealer is same as the Equity dealer, we will let the dealer know)</description>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ModelInfo_TXT__c</fullName>
        <description>Scoring</description>
        <label>Model info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MonCloseHour__c</fullName>
        <label>Mon Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonOpenHour__c</fullName>
        <label>Mon Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_NM__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <description>Notification Date</description>
        <label>Notification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OtherOwnedProducts_TXT__c</fullName>
        <description>Relevant products owned from other brands</description>
        <label>Other owned products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OutreachComplete_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outreach Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnedHondaProducts_TXT__c</fullName>
        <description>Currently owned products from HONDA</description>
        <label>Owned HONDA Products</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pager_TXT__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Pager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentDealerCode_TXT__c</fullName>
        <label>Parent Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneExtension_TXT__c</fullName>
        <label>Dealer Phone Extension</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference_CD__c</fullName>
        <label>Preference Values</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Dealer_Name_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Dealer Name account</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousOwner_TXT__c</fullName>
        <label>Previous Owner</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryMemberofHousehold_FLAG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ths field is to track the household. The information would come from ECRM for existing customers</description>
        <label>Primary Member of household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_TXT__c</fullName>
        <label>Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProviderSourceType_TXT__c</fullName>
        <label>Provider Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>T2</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProviderStatus_TXT__c</fullName>
        <formula>IF( Start_Date__c  &lt;=  NOW()  &amp;&amp;  NOW()  &lt;=  End_Date__c , &apos;Active&apos;, &apos;Inactive&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Service_Name__c</fullName>
        <description>Provider_Service_Name</description>
        <label>Provider Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseAmount_AMT__c</fullName>
        <label>Purchase Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PurchaseDate_TXT__c</fullName>
        <label>Purchase Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PurchaseQuantity_NUM__c</fullName>
        <description>Could this be used in Lead Intellegence - summary of info</description>
        <label>Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Realtime_TimeZone_Offset__c</fullName>
        <label>Realtime TimeZone Offset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_Dealer_Updates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Receive Dealer Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Routable_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Provider Routable status for the dealers who are not enrolled in the HDS program</inlineHelpText>
        <label>Routable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoutingDate_DT__c</fullName>
        <defaultValue>DATETIMEVALUE(&quot;2099-01-01 00:00:00&quot;)</defaultValue>
        <label>Routing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Routing_Date_Termination__c</fullName>
        <label>Routing Termination Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SatCloseHour__c</fullName>
        <label>Sat Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SatOpenHour__c</fullName>
        <label>Sat Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SellingDealer_TXT__c</fullName>
        <description>Enrch / Scoring</description>
        <label>Selling Dealer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_Customer_Acknowledgement_Email_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send Customer Acknowledgement Email</description>
        <label>Send Customer Acknowledgement Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Invalid_Information_notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Business Unit: HELMS.
Jira Story: LMS-6383 Story name.
Description: This is to turn off/turn on the nurturing journeys at the provider level.
Source System: Integration.
Integration: NA.
Data Transformation: N/A.
Functional Definition: This will be used in Provider Account.</description>
        <label>Send Invalid Information notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Product_Missing_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Business Unit: HELMS.
Jira Story: LMS-6383 Story name.
Description: This is to turn off/turn on the nurturing journeys at the provider level.
Source System: Integration.
Integration: NA.
Data Transformation: N/A.
Functional Definition: This will be used in Provider Account.</description>
        <label>Send Product Missing Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_confirmation_interest_notification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Confirm Interest Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_Urban_Science_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send to Urban Science</description>
        <label>Send to Urban Science</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceDealer_TXT__c</fullName>
        <description>Scoring</description>
        <label>Service Dealer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SubDivision_TXT__c</fullName>
        <label>Sub Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subdivision</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SunCloseHour__c</fullName>
        <label>Sun Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SunOpenHour__c</fullName>
        <label>Sun Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThuCloseHour__c</fullName>
        <label>Thu Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThuOpenHour__c</fullName>
        <label>Thu Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone Offset From GMT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerType_TXT__c</fullName>
        <label>Trigger Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>instant</fullName>
                </value>
                <value>
                    <fullName>future</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TueCloseHour__c</fullName>
        <label>Tue Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TueOpenHour__c</fullName>
        <label>Tue Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleBrand_TXT__c</fullName>
        <description>Lead Enrichment and Scoring (If the Lead Dealer is same as the Equity dealer, we will let the dealer know)</description>
        <label>Vehicle Brand</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VendorCode_CD__c</fullName>
        <label>Vendor Code</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WebtoLeadAllowed_FLG__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Web-to-Lead Allowed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WedCloseHour__c</fullName>
        <label>Wed Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WedOpenHour__c</fullName>
        <label>Wed Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCRM_setup_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sent To eCRM</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Acura_Dealer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>DealerCRMVendor_TXT__c</columns>
        <columns>DealerCode_CD__c</columns>
        <columns>HondaDigitalSolutions_FLG__c</columns>
        <columns>Active_Divisions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dealer</value>
        </filters>
        <filters>
            <field>Active_Divisions__c</field>
            <operation>contains</operation>
            <value>M</value>
        </filters>
        <label>Acura Dealers</label>
        <sharedTo>
            <role>Acura_Dealer_Strategist</role>
            <role>B2B_Dealer_Support</role>
            <role>HELMS_Corporate_User</role>
            <role>Honda_Dealer_Strategist</role>
            <role>SBZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Dealer</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Division__c</columns>
        <columns>Active_Divisions__c</columns>
        <columns>HondaDigitalSolutions_FLG__c</columns>
        <columns>IsActive_CD__c</columns>
        <columns>Contact_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dealer</value>
        </filters>
        <label>All Dealers</label>
        <sharedTo>
            <role>HELMS_Corporate_User</role>
            <roleAndSubordinatesInternal>SAZ</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SBZ</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SMZ</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SPZ</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Honda_Dealer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dealer</value>
        </filters>
        <filters>
            <field>Active_Divisions__c</field>
            <operation>contains</operation>
            <value>A</value>
        </filters>
        <label>Honda Dealers</label>
        <sharedTo>
            <role>Acura_Dealer_Strategist</role>
            <role>B2B_Dealer_Support</role>
            <role>HELMS_Corporate_User</role>
            <role>Honda_Dealer_Strategist</role>
            <role>SAZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Person_Account</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>Contact_Key__c</field>
            <operation>startsWith</operation>
            <value>E</value>
        </filters>
        <label>Person Account</label>
    </listViews>
    <listViews>
        <fullName>Power_Equipment_Dealer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dealer</value>
        </filters>
        <filters>
            <field>Active_Divisions__c</field>
            <operation>contains</operation>
            <value>P</value>
        </filters>
        <label>Power Equipment Dealers</label>
        <sharedTo>
            <role>B2B_Dealer_Support</role>
            <role>HELMS_Corporate_User</role>
            <role>PE_Dealer_Strategist</role>
            <role>SPZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Powersports_Dealer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CRM_System__pc</columns>
        <columns>CRMTool_TXT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dealer</value>
        </filters>
        <filters>
            <field>Active_Divisions__c</field>
            <operation>contains</operation>
            <value>M</value>
        </filters>
        <label>Powersports Dealers</label>
        <sharedTo>
            <role>B2B_Dealer_Support</role>
            <role>HELMS_Corporate_User</role>
            <role>PSP_Dealer_Strategist</role>
            <role>SMZ</role>
        </sharedTo>
    </listViews>
</CustomObject>